--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,11 @@
 group 'net.starype.quiz.api'
 
+apply plugin: 'scala'
+
 dependencies {
+    implementation 'org.scala-lang:scala-library:2.13.1'
+    implementation 'org.scala-lang.modules:scala-parser-combinators_2.11:1.0.2'
     implementation 'com.electronwill.night-config:toml:3.6.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.scalatest:scalatest_2.11:3.0.8"
 }
